# chess_variant

./: .editorconfig  .gitattributes  .gitignore  README.md  pyproject.toml
src/chess_variant/core/: board.py  movegen.py  types.py  variant.py
src/chess_variant/domain/: board.py  core_types.py  piece.py  types.py
src/chess_variant/domain/pieces/: pawn.py
src/chess_variant/ui/: render_ascii.py
tools/: setup_github.ps1
